examples/invalid_policies/invalid_violation_action.argx
module invalid.invalid_action

policy Bad {
    deny external_execution
    on violation { action explode }
}
